<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_data_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/input_data_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/input_data_go_to_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_to_menu_button_text" />

        <Button
            android:id="@+id/input_data_go_to_results_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go_to_results_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_data_center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/input_data_finish_num_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/input_data_decrement_finish_num_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@drawable/green_up_arrow" />

            <EditText
                android:id="@+id/input_data_editFinishNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <ImageButton
                android:id="@+id/input_data_increment_finish_num_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@drawable/green_down_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_data_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/input)data_bib_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/input_data_bib_number_tag" />

                <EditText
                    android:id="@+id/input_data_edit_bib_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_data_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_data_name_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/input_data_name_tag" />

                <EditText
                    android:id="@+id/input_data_name_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_data_competitior_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_data_competitor_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/input_data_competitor_type_tag" />

                <Spinner
                    android:id="@+id/input_data_competitor_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/competitor_types"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_data_own_time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/input_data_own_time_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/input_data_own_time_tag" />

                <CheckBox
                    android:id="@+id/input_data_own_time_check_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/input_data_own_time_edit_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:visibility="visible"
                    tools:visibility="gone"
                    android:importantForAutofill="no" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/Input_data_submit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/input_data_submit_button_text" />

</LinearLayout>